fix table on mobile

--- a/public/css/screen.less
+++ b/public/css/screen.less
@@ -267,7 +267,6 @@ td {
 }
 
 td:first-child {
-  min-width: 200px;
   padding-right: 30px;
 }
 
